--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* Variables */
 :root {
   --grid-container-max-width: 1200px; /* Max width for the container */
@@ -268,23 +269,385 @@ header .navbar {
   align-items: center;
   justify-content: space-between;
 }
+header .navbar .navbar-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  -moz-column-gap: 250px;
+       column-gap: 250px;
+}
 header .navbar .menu {
   display: flex;
   align-items: center;
-  -moz-column-gap: 30px;
-       column-gap: 30px;
+  justify-content: center;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+}
+header .navbar .menu .open_sidebar_btn {
+  display: none;
 }
 header .navbar .menu .menu-text {
   display: flex;
   align-items: center;
 }
 header .navbar .menu .menu-text .text {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
+}
+header .navbar .menu .menu-text .select-arrow {
+  padding: 0 10px 7px 10px;
+}
+header .navbar .search-part {
+  background-color: #E4EDF2;
+  width: auto;
+  height: auto;
+  padding: 10px 10px 4px 10px;
+  border-radius: 50%;
+}
+
+@media screen and (max-width: 769px) {
+  header .navbar .navbar-menu {
+    display: flex;
+    flex-direction: row-reverse;
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+  }
+  header .navbar .menu {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  header .navbar .menu .open_sidebar_btn {
+    display: block;
+    padding: 20px;
+    font-size: 30px;
+    font-weight: 600;
+  }
+  header .navbar .menu .menu-text {
+    display: none;
+  }
+}
+.why-socabeg {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+.why-text {
+  grid-column-end: span 6;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+.why-text .title {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+.why-text .title .title-text {
+  font-size: 24px;
+  font-weight: 800;
+}
+.why-text .title .title-text h4 {
+  margin: 0;
+  padding-bottom: 10px;
+}
+.why-text .explanation p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #3B474F;
+  margin: 0;
+}
+.why-text .but {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.why-text .but .but-1 {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+.why-text .but .but-1 .text h6 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+.why-text .but .but-2 {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+.why-text .but .but-2 .text h6 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+.why-text .but .but-3 {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+.why-text .but .but-3 .text h6 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+.why-text .but .but-4 {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+.why-text .but .but-4 .text h6 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+
+.why-images {
+  grid-column-end: span 6;
+}
+.why-images img {
+  width: 90%;
+}
+
+@media screen and (max-width: 769px) {
+  .why-socabeg {
+    row-gap: 30px;
+  }
+  .why-socabeg .why-text {
+    grid-column-end: span 12;
+  }
+  .why-socabeg .why-images {
+    grid-column-end: span 12;
+  }
+}
+.metiers-section {
+  background-color: #E4EDF2;
+  padding: 50px 0;
+}
+.metiers-section .entete {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+.metiers-section .entete h4 {
+  font-size: 24px;
+  font-weight: 800;
+  margin: 0;
+  padding-bottom: 5px;
+}
+.metiers-section .content {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.metiers-section .content .metiers {
+  grid-column-end: span 3;
+  padding-top: 30px;
+}
+.metiers-section .content .metiers .image img {
+  width: 100%;
+}
+.metiers-section .content .metiers .metier {
+  font-size: 18px;
+  font-weight: bold;
+  color: #01418A;
+}
+.metiers-section .content .metiers .metier a {
+  text-decoration: none;
+  color: #01418A;
+}
+.metiers-section .content .metiers .metier h5 {
+  margin: 0;
+}
+.metiers-section .content .metiers .details a {
+  text-decoration: none;
+  color: #3B474F;
+  font-size: 12px;
+  font-weight: 600;
+}
+.metiers-section .content .metiers .details a:hover {
+  color: red;
+}
+
+@media screen and (max-width: 769px) {
+  .metiers-section .content .metiers {
+    grid-column-end: span 6;
+  }
+  .metiers-section .content .metiers .metier {
+    font-size: 18px;
+    font-weight: bold;
+    color: #01418A;
+  }
+  .metiers-section .content .metiers .metier h5 {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 475px) {
+  .metiers-section .content .metiers {
+    grid-column-end: span 12;
+  }
+}
+#realisations {
+  padding: 50px 0;
+}
+#realisations .realisations .entete {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+#realisations .realisations .entete .section-title h4 {
+  font-size: 24px;
+  font-weight: 800;
+  margin: 0;
+  padding-bottom: 5px;
+}
+#realisations .realisations .projets {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  row-gap: 20px;
+}
+#realisations .realisations .projets .realisation {
+  grid-column-end: span 4;
+  padding-bottom: 30px;
+  background-color: #E4EDF2;
+}
+#realisations .realisations .projets .realisation .image img {
+  width: 100%;
+}
+#realisations .realisations .projets .realisation .nom {
+  font-size: 18px;
+  font-weight: bold;
+  color: #01418A;
+}
+#realisations .realisations .projets .realisation .nom a {
+  text-decoration: none;
+  color: #01418A;
+}
+#realisations .realisations .projets .realisation .nom h5 {
+  margin: 0;
+}
+#realisations .realisations .projets .realisation .details a {
+  text-decoration: none;
+  color: red;
+  font-size: 12px;
+  font-weight: 600;
+}
+#realisations .realisations .projets .realisation .details a:hover {
+  color: #01418A;
+}
+#realisations .detail {
+  display: flex;
+  justify-content: center;
+  padding: 50px 0;
+}
+#realisations .detail button {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #fff;
+  color: #01418A;
+  border: 1px solid #E4EDF2;
+  cursor: pointer;
+}
+#realisations .detail button .btn {
+  font-size: 14px;
+  font-weight: 600;
+}
+#realisations .detail button:hover {
+  color: red;
+}
+
+@media screen and (max-width: 769px) {
+  #realisations .realisations .projets .realisation {
+    grid-column-end: span 6;
+    background-color: #E4EDF2;
+  }
+  #realisations .realisations .projets .realisation .nom {
+    font-size: 18px;
+    font-weight: bold;
+    color: #01418A;
+  }
+  #realisations .realisations .projets .realisation .nom h5 {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 475px) {
+  #realisations .realisations .projets .realisation {
+    grid-column-end: span 12;
+    background-color: #E4EDF2;
+  }
+}
+#footer {
+  background-color: #E4EDF2;
+  padding: 10px 0;
+}
+#footer .footer {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+#footer .footer .contacts {
+  grid-column-end: span 3;
+}
+#footer .footer .contacts .logo {
+  padding: 10px 0 20px 0;
+}
+#footer .footer .contacts .contact {
+  display: flex;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+  padding: 5px;
+}
+#footer .footer .contacts .mail {
+  display: flex;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+  padding: 5px;
+}
+#footer .footer .contacts .mail a {
+  text-decoration: none;
+  color: black;
+}
+#footer .footer .contacts .location {
+  display: flex;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+  padding: 5px;
+}
+#footer .footer .contacts .location a {
+  text-decoration: none;
+  color: black;
+}
+#footer .footer .links {
+  grid-column-end: span 3;
+}
+#footer .footer .about {
+  grid-column-end: span 3;
+}
+#footer .footer .newsletter {
+  grid-column-end: span 3;
 }
 
 body {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
 }/*# sourceMappingURL=style.css.map */
