modification page acceuil & recherche

--- a/assets/partials/_colors.scss
+++ b/assets/partials/_colors.scss
@@ -1,4 +1,10 @@
-$first-color : red;
+$first-color : #CD0B11;
 $second-color : #01418A;
 $bck-color: #E4EDF2;
 $p-color:#3B474F;
+$btn-border: #01418a36;
+$footer-a-color: #7C90A7;
+$placeholder:#C8DAE4;
+$licence-footer: #A1A1A1;
+$footer-bck: #F3F3F3;
+$p2-color: #3B474F;
