--- a/assets/scss/promotion.scss
+++ b/assets/scss/promotion.scss
@@ -2,14 +2,4 @@
 @import '../partials/grid';
 @import "../partials/colors";
 @import './header';
-@import './recherche-bien';
-@import './why-socabeg';
-@import './metiers';
-@import './realisations';
-@import './footer';
-body{
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-}
+@import './exemples';
