--- a/assets/scss/_why-socabeg.scss
+++ b/assets/scss/_why-socabeg.scss
@@ -22,59 +22,19 @@
         }
         .explanation{
             p{
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 400;
             color: $p-color;
             margin: 0;
+            line-height: 35px;
             }
         }
         .but{
-            display: flex;
-            flex-direction: column;
-            row-gap: 10px;
-            .but-1{
+            .but-item{
                 display: flex;
                 align-items: center;
                 column-gap: 5px;
-                .text{
-                    h6{
-                        margin: 0;
-                        font-size: 14px;
-                        font-weight: 600;
-                        padding-bottom: 5px;
-                    }
-                }
-            }
-            .but-2{
-                display: flex;
-                align-items: center;
-                column-gap: 5px;
-                .text{
-                    h6{
-                        margin: 0;
-                        font-size: 14px;
-                        font-weight: 600;
-                        padding-bottom: 5px;
-                    }
-                }
-            }
-            .but-3{
-                display: flex;
-                align-items: center;
-                column-gap: 5px;
-                .text{
-                    h6{
-                        margin: 0;
-                        font-size: 14px;
-                        font-weight: 600;
-                        padding-bottom: 5px;
-                    }
-                }
-            }
-            .but-4{
-                display: flex;
-                align-items: center;
-                column-gap: 5px;
+                margin-bottom: 10px;
                 .text{
                     h6{
                         margin: 0;
@@ -88,8 +48,14 @@
     }
     .why-images{
         grid-column-end: span 6;
-        img{
-            width: 90%;
+    }
+    @media screen and (max-width : 1280px) {
+        .why-socabeg{
+            .why-images{
+                img{
+                    width: 95%;
+                }
+            }
         }
     }
     @media screen and (max-width : 769px) {
@@ -100,6 +66,7 @@
             }
             .why-images{
                 grid-column-end: span 12;
+                
             }
         }
     }
